fix: fix broken plus-cross on mobile app (12.03.2023 18.54)

--- a/style.css
+++ b/style.css
@@ -69,12 +69,9 @@ body {
 
 }
 
-.bayan-list-item-description-text, .shadowBox {
-
-}
-
 .bayan-list-item-description .wrapper img {
   width: 8%;
+  height: 8%;
   filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(42deg) brightness(106%) contrast(105%);
   -webkit-animation: fadeIn 0.3s;
   animation: fadeIn 0.3s;
